--- a/css/style.sass
+++ b/css/style.sass
@@ -1,6 +1,6 @@
 body
-	background-color: #ffffff
-	font-family: 'Roboto', sans-serif
+    background-color: #ffffff
+    font-family: 'Open-Sans', sans-serif
 
 
 .container
